# cadsa

./: .gitignore  README.md  cadsa.service  dev.sh  install.sh  update.sh
.github/workflows/: release.yml
backend/: config.py  main.py  pyproject.toml  scheduler.py  version.py
backend/alerts/: engine.py
backend/alerts/notifiers/: email.py  webhook.py
backend/api/: alerts.py  analytics.py  auth.py  auth_utils.py  dependencies.py  realtime.py  security_api.py  settings.py
backend/core/: discovery.py  enrichment.py  ingestion.py  log_parser.py  log_watcher.py  security_engine.py
backend/db/: duckdb_manager.py  sqlite_manager.py
backend/tests/: conftest.py  test_auth_api.py  test_db.py  test_log_parser.py  test_security_engine.py
config/: cadsa.yaml.example
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: AuthShell.tsx
frontend/src/components/charts/: DonutChart.tsx  PerformanceChart.tsx  TimeseriesChart.tsx  TrafficChart.tsx  VisitorsChart.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useFilters.ts
frontend/src/lib/: api.ts  chart-theme.ts  date-range.ts  utils.ts  websocket.ts
frontend/src/pages/: Alerts.tsx  Analytics.tsx  ChangePassword.tsx  Dashboard.tsx  Geo.tsx  HostDetail.tsx  Hosts.tsx  IPDetail.tsx  Login.tsx  RealTime.tsx  Requests.tsx  Security.tsx  Settings.tsx  Setup2FA.tsx
frontend/src/stores/: auth.ts  theme.ts  ui.ts
frontend/src/types/: index.ts
scripts/: fake_logs.py
(+18 files in other folders)
